# browser

./: CMakeLists.txt  main.cpp  upload_to_github.bat
.github/workflows/: build.yml
resources/: HomePage.qml  LoginScreen.qml  Main.qml  qml.qrc
src/: WebEngineHandler.cpp  WebEngineHandler.h
